// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateArticleCategory connects article and category together 1`] = `
Array [
  Object {
    "article": Object {
      "id": "createArticleCategory1",
    },
    "category": Object {
      "id": "createArticleCategory2",
    },
    "negativeFeedbackCount": 0,
    "positiveFeedbackCount": 0,
    "status": "NORMAL",
    "user": Object {
      "id": "test",
    },
  },
]
`;

exports[`CreateArticleCategory connects article and category together 2`] = `
Object {
  "articleCategories": Array [
    Object {
      "appId": "test",
      "categoryId": "createArticleCategory2",
      "createdAt": "2017-01-28T08:45:57.011Z",
      "negativeFeedbackCount": 0,
      "positiveFeedbackCount": 0,
      "status": "NORMAL",
      "updatedAt": "2017-01-28T08:45:57.011Z",
      "userId": "test",
    },
  ],
  "normalArticleCategoryCount": 1,
  "references": Array [
    Object {
      "type": "LINE",
    },
  ],
  "text": "foofoo",
}
`;

exports[`CreateArticleCategory connects article and category together by AI model 1`] = `
Array [
  Object {
    "article": Object {
      "id": "createArticleCategory1",
    },
    "category": Object {
      "id": "createArticleCategory2",
    },
    "negativeFeedbackCount": 0,
    "positiveFeedbackCount": 0,
    "status": "NORMAL",
    "user": Object {
      "id": "test",
    },
  },
]
`;

exports[`CreateArticleCategory connects article and category together by AI model 2`] = `
Object {
  "articleCategories": Array [
    Object {
      "aiConfidence": 0.99,
      "aiModel": "aiModel1",
      "appId": "test",
      "categoryId": "createArticleCategory2",
      "createdAt": "2017-01-28T08:45:57.011Z",
      "negativeFeedbackCount": 0,
      "positiveFeedbackCount": 0,
      "status": "NORMAL",
      "updatedAt": "2017-01-28T08:45:57.011Z",
      "userId": "test",
    },
  ],
  "normalArticleCategoryCount": 1,
  "references": Array [
    Object {
      "type": "LINE",
    },
  ],
  "text": "foofoo",
}
`;

exports[`CreateArticleCategory update userId and appId when connecting with DELETED ArticleCategory 1`] = `
Array [
  Object {
    "article": Object {
      "id": "articleHasDeletedArticleCategory",
    },
    "category": Object {
      "id": "createArticleCategory2",
    },
    "negativeFeedbackCount": 0,
    "positiveFeedbackCount": 0,
    "status": "NORMAL",
    "user": Object {
      "id": "test2",
    },
  },
]
`;

exports[`CreateArticleCategory update userId and appId when connecting with DELETED ArticleCategory 2`] = `
Object {
  "articleCategories": Array [
    Object {
      "appId": "test2",
      "categoryId": "createArticleCategory2",
      "negativeFeedbackCount": 0,
      "positiveFeedbackCount": 0,
      "status": "NORMAL",
      "updatedAt": "2017-01-28T08:45:57.011Z",
      "userId": "test2",
    },
  ],
  "references": Array [
    Object {
      "type": "LINE",
    },
  ],
  "text": "foofoo",
}
`;
